# agahyar-project

./: .dockerignore  .env  .env.example  .gitignore  .hadolint.yaml  .pre-commit-config.yaml  AGENTS.md  API_DOCS.md  CHANGELOG.md  DEPLOYMENT.md  DEVELOPMENT.md  Dockerfile  MAIL_SETUP.md  MATOMO_SETUP.md  README.md  docker-compose.dev.yml  docker-compose.mailcow.yml  docker-compose.matomo.yml  docker-compose.prod.yml  manage.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  release.yml
.tigo/: config.yaml
.tigo/20260627-100000/: TASK.md
.tigo/20260627-100100/: TASK.md
.tigo/20260627-100200/: TASK.md
.tigo/20260627-100300/: TASK.md
.tigo/20260627-100400/: TASK.md
.tigo/20260627-100500/: TASK.md
.tigo/20260627-100600/: TASK.md
.tigo/20260627-100700/: TASK.md
.tigo/20260627-100800/: TASK.md
.tigo/20260627-100900/: TASK.md
.tigo/20260627-101000/: TASK.md
.tigo/20260627-101100/: TASK.md
.tigo/20260627-101200/: TASK.md
.tigo/20260627-101300/: TASK.md
.tigo/20260627-101400/: TASK.md
.tigo/20260627-101500/: TASK.md
.tigo/20260627-101600/: TASK.md
.tigo/20260627-101700/: TASK.md
.tigo/20260627-101800/: TASK.md
.tigo/20260627-101900/: TASK.md
.tigo/20260627-102000/: TASK.md
.tigo/20260627-102100/: TASK.md
.tigo/20260627-102200/: TASK.md
.tigo/20260627-102300/: TASK.md
.tigo/20260627-193328/: TASK.md
.tigo/20260627-193405/: TASK.md
.tigo/20260627-193832/: TASK.md
.tigo/20260627-194701/: TASK.md
.tigo/20260627-202923/: TASK.md
.tigo/20260627-203136/: TASK.md
.tigo/20260628-054408/: TASK.md
.tigo/20260628-054609/: TASK.md
.tigo/20260628-221824/: TASK.md
.tigo/20260629-010801/: TASK.md
.tigo/20260629-010801-001/: TASK.md
.tigo/20260629-010801-002/: TASK.md
.tigo/20260629-010801-003/: TASK.md
.tigo/20260629-010801-004/: TASK.md
.tigo/20260629-010801-005/: TASK.md
.tigo/20260629-010802/: TASK.md
.tigo/20260629-010803/: TASK.md
.tigo/20260629-010804/: TASK.md
.tigo/20260629-010805/: TASK.md
.tigo/20260629-010806/: TASK.md
.tigo/20260629-010907/: TASK.md
.tigo/20260629-010908/: TASK.md
.tigo/20260629-010909/: TASK.md
.tigo/20260629-010910/: TASK.md
.tigo/20260629-010911/: TASK.md
.tigo/20260629-010912/: TASK.md
.tigo/20260629-010913/: TASK.md
.tigo/20260629-010914/: TASK.md
.tigo/20260629-010914-007/: TASK.md
.tigo/20260629-010914-008/: TASK.md
.tigo/20260629-010914-009/: TASK.md
.tigo/20260629-010914-011/: TASK.md
.tigo/20260629-010914-015/: TASK.md
.tigo/20260629-010914-017/: TASK.md
.tigo/20260629-010914-018/: TASK.md
.tigo/20260629-010914-020/: TASK.md
.tigo/20260629-010915/: TASK.md
.tigo/20260629-010916/: TASK.md
.tigo/20260629-010919/: TASK.md
.tigo/20260629-010920/: TASK.md
.tigo/20260629-011000-001/: TASK.md
.tigo/20260629-011000-002/: TASK.md
.tigo/20260629-011000-003/: TASK.md
.tigo/20260629-011000-004/: TASK.md
.tigo/20260629-011000-005/: TASK.md
.tigo/20260629-011000-006/: TASK.md
.tigo/20260629-011001/: TASK.md
.tigo/20260629-011002/: TASK.md
.tigo/20260629-011003/: TASK.md
.tigo/20260629-011004/: TASK.md
.tigo/20260629-011005/: TASK.md
.tigo/20260629-011007/: TASK.md
.tigo/20260629-013001/: TASK.md
.tigo/20260629-013002/: TASK.md
.tigo/20260629-013003/: TASK.md
.tigo/20260629-013004/: TASK.md
.tigo/20260629-013005/: TASK.md
.tigo/20260629-013006/: TASK.md
.tigo/20260629-013007/: TASK.md
.tigo/20260629-013008/: TASK.md
.tigo/20260629-072825/: TASK.md
.tigo/20260629-111523/: TASK.md
.tigo/20260703-175347/: TASK.md
.tigo/20260703-175458/: TASK.md
.tigo/20260703-175842/: TASK.md
.tigo/20260703-223350/: TASK.md
.tigo/20260705-010000/: TASK.md
.tigo/20260705-010001/: TASK.md
.tigo/20260705-010002/: TASK.md
.tigo/20260705-131600/: TASK.md
.tigo/20260705-151433/: TASK.md
.tigo/20260706-092655/: TASK.md
.tigo/20260706-110618/: TASK.md
.tigo/20260706-113452/: TASK.md
agahyar_project/: settings.py
scripts/: backup_db.py  generate_favicons.py  populate_centers.py  populate_faq.py  populate_services.py  vendor_static.ps1  vendor_static.sh
services/: admin.py  error_codes.py  forms.py  models.py  scraper.py  test_forms.py  test_scraper.py  test_views.py  urls.py  views.py
templates/: 404.html  429.html  500.html
tests/: conftest.py  test_admin_data_transfer.py  test_api.py  test_forms.py  test_management_commands.py  test_maps.py  test_models.py  test_resources.py  test_security_checks.py  test_validators.py  test_views.py  test_widgets.py
(+163 files in other folders)
